FIXED: community page layout broken ;

--- a/static/styles/mdp.scss
+++ b/static/styles/mdp.scss
@@ -99,7 +99,7 @@ main {
       display: flex;
       flex-grow:1;
   }
-  .container, .container-fluid {
+  .container{
     & > .row { width:100%}
   }
 }
